Fixed weird button padding on Safari

--- a/client/src/scss/elements/video.scss
+++ b/client/src/scss/elements/video.scss
@@ -55,6 +55,7 @@
             button {
                 width: 24px;
                 height: 24px;
+                padding: 0;
                 border: none;
                 border-radius: $border-radius-4;
                 background-color: $color-transparent-light;
